Add content dan design CSS  QualityCheck.js

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -52,7 +52,7 @@
   }
   
   .cta-button:hover {
-    background-color: #e04a13;
+    background-color: #ff5715;
     transform: scale(1.1); 
   }
   
