--- a/src/styles/QualityCheck.css
+++ b/src/styles/QualityCheck.css
@@ -160,7 +160,9 @@
 
   .hal-yang-disiapkan {
     color: #ff5715;
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin-bottom: 20px;
+    margin-left: -5px;
+    padding-left: 0;
     text-align: left;
   }
