--- a/src/styles/QualityCheck.css
+++ b/src/styles/QualityCheck.css
@@ -160,8 +160,9 @@
 
   .hal-yang-disiapkan {
     color: #ff5715;
-    font-size: 1.4rem;
-    margin-bottom: -20px;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    margin-top: -15px;
     margin-left: -5px;
     padding-left: 0;
     text-align: left;
